--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-beautifulsoup4==4.11.1
+beautifulsoup4==4.12.2
+blinker==1.6.2
 bs4==0.0.1
-certifi==2022.9.24
-charset-normalizer==2.1.1
-click==8.1.3
+certifi==2023.7.22
+charset-normalizer==3.3.0
+click==8.1.7
 colorama==0.4.6
-dnspython==2.2.1
-Flask==2.2.2
+dnspython==2.4.2
+Flask==3.0.0
 idna==3.4
-importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
-MarkupSafe==2.1.1
-pymongo==4.3.2
-python-dotenv==0.21.0
-requests==2.28.1
-soupsieve==2.3.2.post1
-urllib3==1.26.12
-Werkzeug==2.2.2
+MarkupSafe==2.1.3
+pymongo==4.5.0
+python-dotenv==1.0.0
+requests==2.31.0
+soupsieve==2.5
+urllib3==2.0.6
+Werkzeug==3.0.0
 zipp==3.10.0
